--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevArt - Development Releted Article</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1828915420581549&host=ca-host-pub-1556223355139109" crossorigin="anonymous"></script>
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "DevArt",
+  "description": "Free Development Related Articles",
+  "review":
+  {
+    "@type": "Review",
+    "reviewRating":
+    {
+      "@type": "Rating",
+      "ratingValue": "5"
+    },
+    "author": {"@type": "Person", "name": "Author Name"},
+    "datePublished": "Date of Review",
+    "reviewBody": "Review Body"
+  }
+}
+</script>
+
   </head>
   <body>
     <div id="root"></div>
