--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevArt - Development Releted Article</title>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1828915420581549&host=ca-host-pub-1556223355139109" crossorigin="anonymous"></script>
 
-<script type="application/ld+json">
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DevArt - Development Releted Article</title>
+  <script async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1828915420581549&host=ca-host-pub-1556223355139109"
+    crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JBCL68B434"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JBCL68B434');
+  </script>
+  <script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "Product",
@@ -21,16 +32,18 @@
       "@type": "Rating",
       "ratingValue": "5"
     },
-    "author": {"@type": "Person", "name": "Author Name"},
+    "author": {"@type": "Person", "name": "Sh Raj"},
     "datePublished": "Date of Review",
     "reviewBody": "Review Body"
   }
 }
 </script>
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
